# oz_assignment

./: .gitmodules  Ch04_task(code).ipynb  back.yaml  front.yaml  iris.ipynb  제목 없는 다이어그램.drawio
04_pymysql/: airbnb_dummy.py  test_pymysql.py
Admin/: admin.css  admin.html  login.html  signup.css  signup.html  signup.js
Database/: 2일차 과제.ipynb  Day3_assignment  assignment.py  ch4_22-27.sql  chapter01_06(정답).ipynb  day7.sql  (+2 more)
django/: db.sqlite3  pyproject.toml
django/boards/: models.py
django/boards/migrations/: 0001_initial.py  0002_rename_contents_board_content.py  0003_board_date_board_likes_board_reviews_board_writer_and_more.py  0004_board_created_at_board_updated_at.py  0005_board_user.py
django/common/: models.py
django/config/: authentication.py  settings.py  urls.py
django/feeds/: admin.py  serializers.py  urls.py  views.py
django/feeds/migrations/: 0001_initial.py
django/reviews/: serializers.py  views.py
django/reviews/migrations/: 0001_initial.py
django/users/: admin.py  models.py  serializers.py  urls.py  views.py
django/users/migrations/: 0001_initial.py  0002_user_grade_user_is_business.py
membership/: orm.ipynb  pyproject.toml  run.sh
membership/membership_project/: db.sqlite3
membership/membership_project/accounts/: models.py
membership/membership_project/accounts/migrations/: 0001_initial.py
membership/membership_project/addresses/: models.py  urls.py  views.py
membership/membership_project/addresses/migrations/: 0001_initial.py
membership/membership_project/membership_project/: asgi.py  settings.py  urls.py  wsgi.py
(+272 files in other folders)
