[tool.poetry]
name = "oz-django"
version = "0.1.0"
description = "oz python django"
authors = ["yeringwak <yerin1562@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
